profilelist1exp/unpackaged/objects/SupportRequestMailBox__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Global Business Operation PMO Support Request Destination Mailbox</description>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisibleSelection__c</fullName>
        <label>VisibleSelection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Support Request Destination Mailbox</label>
</CustomObject>